Another pixel alignment fix

--- a/demosite/src/Pages/signupScreen/SignupScreen.module.css
+++ b/demosite/src/Pages/signupScreen/SignupScreen.module.css
@@ -83,6 +83,10 @@
     margin-left: 20px;
 }
 
+.SignupScreen_radioBtns_container {
+    margin-top: 10px;
+}
+
 .SignupScreen_radioBtns_container input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
